--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "license": "MIT",
   "dependencies": {
     "concat-stream": "~1.0.0",
-    "semver": "~1.1.4"
+    "semver": "~1.1.4",
+    "hasinternet": "0.0.0"
+  },
+  "devDependencies": {
+    "tape": "~2.3.0"
   }
 }
